change name service and add mapped services swaggerui
