# src/main/resources/static/swagger-apis/api1/swagger.yaml
@@ -64,6 +64,48 @@ paths:
         '405':
           description: Invalid input
       deprecated: false
+  /client/asociar/{idC}/{idL}:
+    post:
+      tags:
+        - "cliente"
+      summary: "Agregar un nuevo cliente"
+      description: ""
+      operationId: "joinClientLine"
+      consumes:
+        - "application/json"
+      produces:
+        - "*/*"
+      parameters:
+        - name: "idC"
+          in: "path"
+          description: "ID del cliente"
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: "idL"
+          in: "path"
+          description: "ID de la linea telefonica"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            additionalProperties:
+              type: object
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '405':
+          description: Invalid input
+      deprecated: false
   /client/searchAll:
     get:
       tags:
